# Genesis

./: .gitignore  2506.10943v2.md  README.md  RESEARCH_LOG.md  RESEARCH_ROADMAP.md  profile.stats  pyproject.toml  requirements.txt
core/: __init__.py  agent.py  clustering.py  concept_formation.py  consolidation.py  contrastive.py  delay_bellman.py  diagnostics.py  goals.py  language.py  logger.py  memory.py  networks_min.py  object_permanence.py  planning.py  reasoning.py  recon_auxiliary.py  replay_buffer.py  rnd.py  self_model.py  world_model.py  world_model_v3.py
core/executive_cortex/: __init__.py  cortex.py
core/seal/: loop.py  regulation.py  restem.py  self_edit_policy.py  synthetic_rollout.py
gridworld_track/: compare_coverage.py  gridworld.py  sweep_coverage.py  train.py  train_seal_regulation.py  train_seal_synthetic.py
verify/: demo_cognitive_architecture.py  smoke_existing.py  verify_concept_formation.py  verify_consolidation.py  verify_contrastive.py  verify_contrastive_consequence_pairs.py  verify_contrastive_on_wm_features.py  verify_encoder.py  verify_executive_cortex.py  verify_goals.py  verify_language.py  verify_memory.py  verify_object_permanence.py  verify_planning.py  verify_reasoning.py  verify_recon_context.py  verify_seal_regulation_beats.py  verify_seal_regulation_matches.py  verify_seal_synthetic.py  verify_self_model.py  verify_world_model.py  verify_world_model_v2.py  verify_world_model_v3.py
visual_track/: augmentations.py  train_visual.py  vision_encoder.py  visual_buffer.py  visual_gridworld.py  world_model_v2.py
