[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "genesis"
version = "0.1.0"
description = "Intrinsic-curiosity artificial-life agent with verified concept-formation probes"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
